# velodyne

velodyne_driver/: CMakeLists.txt  package.xml
velodyne_driver/include/velodyne_driver/: driver.h  input.h
velodyne_driver/launch/: nodelet_manager.launch
velodyne_driver/scripts/: pcap_to_bag.sh  velodyne_command_line.py
velodyne_driver/src/driver/: CMakeLists.txt  driver.cc  nodelet.cc  pcap_to_bag.cc
velodyne_driver/src/lib/: input.cc
velodyne_laserscan/src/: VelodyneLaserScan.cpp
velodyne_launch/: CMakeLists.txt  package.xml
velodyne_launch/launch/: velodyne.launch  velodyne.rviz
velodyne_launch/params/: vlp32_config.m
velodyne_msgs/: CMakeLists.txt
velodyne_msgs/msg/: VelodynePPS.msg  VelodynePositionPacket.msg
velodyne_pointcloud/: CMakeLists.txt  package.xml
velodyne_pointcloud/cfg/: CloudNode.cfg
velodyne_pointcloud/include/velodyne_pointcloud/: calibration.h  colors.h  convert.h  datacontainerbase.h  point_types.h  pointcloudXYZIADRT.h  position_packet_converter.h  rawdata.h  transform.h
velodyne_pointcloud/launch/: 32e_points.launch  64e_S3.launch  VLP-32C_points.launch  VLP16_points.launch  cloud_nodelet.launch  transform_nodelet.launch
velodyne_pointcloud/params/: VeloView-VLP-32C.yaml
velodyne_pointcloud/src/conversions/: CMakeLists.txt  cloud_nodelet.cc  convert.cc  pointcloudXYZIADRT.cc  pointcloudXYZIR.cc  position_packet_converter.cc  transform.cc
velodyne_pointcloud/src/lib/: calibration.cc  rawdata.cc
